Changed top-courses section to latest-courses & fixed some responsive css problems.

--- a/front-end templates/Home Page/index.html
+++ b/front-end templates/Home Page/index.html
@@ -49,10 +49,10 @@
       </div>
     </section>
 
-    <!-- Top-Courses Section -->
-    <h1 class="section-title">Top Courses</h1>
+    <!-- latest-Courses Section -->
+    <h1 class="section-title">Latest Courses</h1>
 
-    <section class="container top-courses">
+    <section class="container latest-courses">
       <div class="card">
         <div class="price-tag">
           <p>$0</p>
