--- a/front-end templates/Home.html
+++ b/front-end templates/Home.html
@@ -13,18 +13,18 @@
       rel="stylesheet"
     />
     <!-- General CSS -->
-    <link rel="stylesheet" href="../global/css/all.min.css" />
-    <link rel="stylesheet" href="../global/css/global.css" />
+    <link rel="stylesheet" href="./global/css/all.min.css" />
+    <link rel="stylesheet" href="./global/css/global.css" />
 
     <!-- Current Page CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./Home Page/css/style.css" />
   </head>
 
   <body onscroll="NavbarChangeOnScroll()">
     <!-- Navbar -->
     <header id="Header" class="container">
       <nav class="navbar">
-        <img class="logo" src="imgs/Logo.png" alt="page_logo" />
+        <img class="logo" src="./Home Page/imgs/Logo.png" alt="page_logo" />
         <i
           class="menu-btn fa-solid fa-bars"
           id="menuBtn"
@@ -32,9 +32,14 @@
         ></i>
         <ul class="menu hide-menu" id="myMenu">
           <li><a class="active" href="#">Home</a></li>
-          <li><a href="#">Courses</a></li>
+          <li><a href="/courses.html">Courses</a></li>
           <li><a href="#About">About</a></li>
           <li><a href="#Contact">Contact</a></li>
+          <!-- Profile -->
+          <!-- <div class="profile">
+            <img src="./Home Page/imgs/Logo.png" alt="" srcset="">
+            <li><a href="#">Fady Hany</a></li>
+          </div> -->
         </ul>
       </nav>
     </header>
@@ -52,7 +57,7 @@
     <!-- latest-Courses Section -->
     <h1 class="section-title">Latest Courses</h1>
 
-    <section class="container latest-courses">
+    <section class="latest-courses">
       <div class="card">
         <div class="price-tag">
           <p>$0</p>
@@ -107,7 +112,8 @@
     </section>
 
     <!-- About Section -->
-    <h1 id="About" class="section-title">About</h1>
+    <span id="About"></span>
+    <h1 class="section-title">About</h1>
 
     <section class="container about">
       <div class="about-text">
@@ -121,15 +127,18 @@
           <span class="special-word">Hero</span>.
         </p>
       </div>
-      <img
-        class="about-img"
-        src="https://placehold.co/600x400"
-        alt="About-img"
-      />
+      <div class="img-container">
+        <img
+          class="about-img"
+          src="https://placehold.co/600x400"
+          alt="About-img"
+        />
+      </div>
     </section>
 
     <!-- Contact Section -->
-    <h1 id="Contact" class="section-title">Contact</h1>
+    <span id="Contact"></span>
+    <h1 class="section-title">Contact</h1>
 
     <form class="container contact" action="">
       <div>
@@ -153,6 +162,6 @@
     </footer>
   </body>
 
-  <script src="../global/js/all.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="./global/js/all.min.js"></script>
+  <script src="./global/js/script.js"></script>
 </html>
