Changed the css of all templates to support arabic & english

--- a/front-end templates/Home.html
+++ b/front-end templates/Home.html
@@ -22,10 +22,12 @@
 
   <body onscroll="NavbarChangeOnScroll()">
     <!-- Navbar -->
-    <header id="Header" class="container">
+    <!-- Navbar -->
+    <header id="Header">
       <nav class="navbar">
-        <img class="logo" src="./Home Page/imgs/Logo.png" alt="page_logo" />
-        <i
+        <img class="logo" src="./Courses Page/imgs/Logo.png" alt="page_logo" />
+        <div>
+          <i
           class="menu-btn fa-solid fa-bars"
           id="menuBtn"
           onclick="MobileMenuToggler()"
@@ -36,11 +38,12 @@
           <li><a href="#About">About</a></li>
           <li><a href="#Contact">Contact</a></li>
           <!-- Profile -->
-          <!-- <div class="profile">
-            <img src="./Home Page/imgs/Logo.png" alt="" srcset="">
+          <div class="profile">
+            <img src="./Courses Page/imgs/Logo.png" alt="" srcset="">
             <li><a href="#">Fady Hany</a></li>
-          </div> -->
+          </div>
         </ul>
+        </div>
       </nav>
     </header>
 
