Added 'languageChanger' button to the navbar.

--- a/front-end templates/Home.html
+++ b/front-end templates/Home.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./Home Page/css/style.css" />
   </head>
 
-  <body onscroll="NavbarChangeOnScroll()">
+  <body id="body" onscroll="NavbarChangeOnScroll()">
     <!-- Navbar -->
     <!-- Navbar -->
     <header id="Header">
@@ -42,8 +42,10 @@
             <img src="./Courses Page/imgs/Logo.png" alt="" srcset="">
             <li><a href="#">Fady Hany</a></li>
           </div>
+          <li><button id="languageChanger" onclick="LanguageToggler()">arabic</button></li>
         </ul>
         </div>
+        
       </nav>
     </header>
 
