Finished Login and Register Forms.

--- a/front-end templates/Home.html
+++ b/front-end templates/Home.html
@@ -38,10 +38,10 @@
           <li><a href="#Contact">Contact</a></li>
           <!-- Profile -->
           <div class="profile">
-            <img src="./Courses Page/imgs/Logo.png" alt="" srcset="">
+            <img src="http://localhost:8000/api/v1/user/img/1712770165723.png" alt="" srcset="">
             <li><a href="#">Fady Hany</a></li>
           </div>
-          <li><button id="languageChanger" onclick="LanguageToggler()">arabic</button></li>
+          <!-- <li><button id="languageChanger" onclick="LanguageToggler()">arabic</button></li> -->
         </ul>
         </div>
         
