--- a/front-end templates/register.html
+++ b/front-end templates/register.html
@@ -81,11 +81,42 @@
           <input name="isInstructor" type="checkbox" id="isInstructor" value="Y"/>
         </div>
 
+        <!-- Instructor payment -->
+        <!-- <div class="PaymentGroup">
+          <h1>Payment Method</h1>
+          <div class="TextGroup">
+            <label for="card-num">Card-Number</label>
+            <input
+              id="card-num"
+              type="number"
+              placeholder="Enter your Card-Number..."
+            />
+          </div>
+          <div class="TextGroup">
+            <label for="card-exp">Expiration-Date</label>
+            <input
+              id="card-exp"
+              type="date"
+              placeholder="Enter your Card Expiration-Date..."
+            />
+          </div>
+          <div class="TextGroup">
+            <label for="card-cvv">CVV</label>
+            <input
+              id="card-cvv"
+              type="number"
+              placeholder="Enter your Card CVV..."
+            />
+          </div>
+        </div> -->
+
         <!-- Image -->
         <div class="FileGroup">
           <label for="image">Upload your Profile Image:</label>
           <input type="file" id="image" name="image" />
         </div>
+
+        <a href="#">Already Have an Account?</a>
 
         <!-- Submit -->
         <input class="SubmitBtn" type="submit" value="Register" />
