--- a/front-end templates/Home.html
+++ b/front-end templates/Home.html
@@ -27,24 +27,21 @@
         <img class="logo" src="./Courses Page/imgs/Logo.png" alt="page_logo" />
         <div>
           <i
-          class="menu-btn fa-solid fa-bars"
-          id="menuBtn"
-          onclick="MobileMenuToggler()"
-        ></i>
-        <ul class="menu hide-menu" id="myMenu">
-          <li><a class="active" href="#">Home</a></li>
-          <li><a href="/courses.html">Courses</a></li>
-          <li><a href="#About">About</a></li>
-          <li><a href="#Contact">Contact</a></li>
-          <!-- Profile -->
-          <div class="profile">
-            <img src="http://localhost:8000/api/v1/user/img/1712770165723.png" alt="" srcset="">
-            <li><a href="#">Fady Hany</a></li>
-          </div>
-          <!-- <li><button id="languageChanger" onclick="LanguageToggler()">arabic</button></li> -->
-        </ul>
+            class="menu-btn fa-solid fa-bars"
+            id="menuBtn"
+            onclick="MobileMenuToggler()"
+          ></i>
+          <ul class="menu hide-menu" id="myMenu">
+            <li><a class="active" href="#">Home</a></li>
+            <li><a href="/courses.html">Courses</a></li>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Contact">Contact</a></li>
+          </ul>
         </div>
-        
+        <div class="login-register">
+          <li><a href="/register.html">Register</a></li>
+          <li><a href="/login.html">Login</a></li>
+        </div>
       </nav>
     </header>
 
@@ -53,15 +50,15 @@
       <h1>A New Way Of Learning</h1>
       <h3>Modern Learning is Here</h3>
       <div>
-        <a class="sign-up-btn" href="#">Sign Up</a>
-        <a class="sign-in-btn" href="#">Sign In</a>
+        <a class="sign-up-btn" href="/register.html">Sign Up</a>
+        <a class="sign-in-btn" href="/login.html">Sign In</a>
       </div>
     </section>
 
     <!-- latest-Courses Section -->
     <h1 class="section-title">Latest Courses</h1>
 
-    <section class="latest-courses">
+    <section class="container latest-courses">
       <div class="card">
         <div class="price-tag">
           <p>$0</p>
